// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostgreSQL DDL Snapshots > All field types DDL output > should match snapshot for all types schema 1`] = `
"CREATE TABLE AllTypes (
  "$id" TEXT NOT NULL,
  "$type" TEXT NOT NULL,
  "$version" INTEGER NOT NULL DEFAULT 1,
  "$createdAt" BIGINT NOT NULL,
  "$updatedAt" BIGINT NOT NULL,
  stringField TEXT NOT NULL,
  textField TEXT NOT NULL,
  intField INTEGER NOT NULL,
  longField BIGINT NOT NULL,
  bigintField BIGINT NOT NULL,
  floatField REAL NOT NULL,
  doubleField DOUBLE PRECISION NOT NULL,
  boolField BOOLEAN NOT NULL,
  booleanField BOOLEAN NOT NULL,
  uuidField UUID NOT NULL,
  timestampField TIMESTAMP NOT NULL,
  timestamptzField TIMESTAMPTZ NOT NULL,
  dateField DATE NOT NULL,
  timeField TIME NOT NULL,
  jsonField JSONB NOT NULL,
  binaryField BYTEA NOT NULL,
  decimalField DECIMAL(38, 9) NOT NULL,
  stringArray TEXT[] NOT NULL,
  intArray INTEGER[] NOT NULL,
  uuidArray UUID[] NOT NULL,
  PRIMARY KEY ("$id")
);"
`;

exports[`PostgreSQL DDL Snapshots > All field types DDL output > should match snapshot for all types schema with options 1`] = `
"CREATE TABLE IF NOT EXISTS types_test.AllTypes (
  "$id" TEXT NOT NULL,
  "$type" TEXT NOT NULL,
  "$version" INTEGER NOT NULL DEFAULT 1,
  "$createdAt" BIGINT NOT NULL,
  "$updatedAt" BIGINT NOT NULL,
  stringField TEXT NOT NULL,
  textField TEXT NOT NULL,
  intField INTEGER NOT NULL,
  longField BIGINT NOT NULL,
  bigintField BIGINT NOT NULL,
  floatField REAL NOT NULL,
  doubleField DOUBLE PRECISION NOT NULL,
  boolField BOOLEAN NOT NULL,
  booleanField BOOLEAN NOT NULL,
  uuidField UUID NOT NULL,
  timestampField TIMESTAMP NOT NULL,
  timestamptzField TIMESTAMPTZ NOT NULL,
  dateField DATE NOT NULL,
  timeField TIME NOT NULL,
  jsonField JSONB NOT NULL,
  binaryField BYTEA NOT NULL,
  decimalField DECIMAL(38, 9) NOT NULL,
  stringArray TEXT[] NOT NULL,
  intArray INTEGER[] NOT NULL,
  uuidArray UUID[] NOT NULL,
  PRIMARY KEY ("$id")
);"
`;

exports[`PostgreSQL DDL Snapshots > Complex schema with relations DDL output > should match snapshot for complex schema 1`] = `
"CREATE TABLE Post (
  "$id" TEXT NOT NULL,
  "$type" TEXT NOT NULL,
  "$version" INTEGER NOT NULL DEFAULT 1,
  "$createdAt" BIGINT NOT NULL,
  "$updatedAt" BIGINT NOT NULL,
  id UUID NOT NULL UNIQUE,
  title TEXT NOT NULL UNIQUE,
  content TEXT NOT NULL,
  authorId TEXT NOT NULL UNIQUE,
  categoryId TEXT,
  publishedAt TIMESTAMP,
  viewCount INTEGER NOT NULL,
  isPublished BOOLEAN NOT NULL,
  metadata JSONB NOT NULL,
  tags TEXT[] NOT NULL,
  PRIMARY KEY ("$id"),
  UNIQUE (id),
  UNIQUE (title),
  UNIQUE (authorId)
);"
`;

exports[`PostgreSQL DDL Snapshots > Complex schema with relations DDL output > should match snapshot for complex schema with all options 1`] = `
"CREATE TABLE IF NOT EXISTS blog.Post (
  "$id" TEXT NOT NULL,
  "$type" TEXT NOT NULL,
  "$version" INTEGER NOT NULL DEFAULT 1,
  "$createdAt" BIGINT NOT NULL,
  "$updatedAt" BIGINT NOT NULL,
  id UUID NOT NULL UNIQUE,
  title TEXT NOT NULL UNIQUE,
  content TEXT NOT NULL,
  authorId TEXT NOT NULL UNIQUE,
  categoryId TEXT,
  publishedAt TIMESTAMP,
  viewCount INTEGER NOT NULL,
  isPublished BOOLEAN NOT NULL,
  metadata JSONB NOT NULL,
  tags TEXT[] NOT NULL,
  PRIMARY KEY ("$id"),
  UNIQUE (id),
  UNIQUE (title),
  UNIQUE (authorId)
);"
`;

exports[`PostgreSQL DDL Snapshots > Edge case DDL output > should match snapshot for empty schema (only system fields) 1`] = `
"CREATE TABLE EmptyEntity (
  "$id" TEXT NOT NULL,
  "$type" TEXT NOT NULL,
  "$version" INTEGER NOT NULL DEFAULT 1,
  "$createdAt" BIGINT NOT NULL,
  "$updatedAt" BIGINT NOT NULL,
  PRIMARY KEY ("$id")
);"
`;

exports[`PostgreSQL DDL Snapshots > Edge case DDL output > should match snapshot for schema with all modifiers 1`] = `
"CREATE TABLE Modifiers (
  "$id" TEXT NOT NULL,
  "$type" TEXT NOT NULL,
  "$version" INTEGER NOT NULL DEFAULT 1,
  "$createdAt" BIGINT NOT NULL,
  "$updatedAt" BIGINT NOT NULL,
  requiredField TEXT NOT NULL UNIQUE,
  optionalField TEXT,
  uniqueField TEXT NOT NULL UNIQUE,
  requiredUnique TEXT NOT NULL UNIQUE,
  arrayField TEXT[] NOT NULL,
  PRIMARY KEY ("$id"),
  UNIQUE (requiredField),
  UNIQUE (uniqueField),
  UNIQUE (requiredUnique)
);"
`;

exports[`PostgreSQL DDL Snapshots > Edge case DDL output > should match snapshot for schema with reserved words 1`] = `
"CREATE TABLE Reserved (
  "$id" TEXT NOT NULL,
  "$type" TEXT NOT NULL,
  "$version" INTEGER NOT NULL DEFAULT 1,
  "$createdAt" BIGINT NOT NULL,
  "$updatedAt" BIGINT NOT NULL,
  "select" TEXT NOT NULL,
  "from" TEXT NOT NULL,
  "where" TEXT NOT NULL,
  "order" TEXT NOT NULL,
  "group" TEXT NOT NULL,
  PRIMARY KEY ("$id")
);"
`;

exports[`PostgreSQL DDL Snapshots > Edge case DDL output > should match snapshot for schema with special characters in name 1`] = `
"CREATE TABLE "My-Special_Entity" (
  "$id" TEXT NOT NULL,
  "$type" TEXT NOT NULL,
  "$version" INTEGER NOT NULL DEFAULT 1,
  "$createdAt" BIGINT NOT NULL,
  "$updatedAt" BIGINT NOT NULL,
  id UUID NOT NULL UNIQUE,
  name TEXT NOT NULL,
  PRIMARY KEY ("$id"),
  UNIQUE (id)
);"
`;

exports[`PostgreSQL DDL Snapshots > Indexes and constraints DDL output > should match snapshot for indexed schema 1`] = `
"CREATE TABLE Product (
  "$id" TEXT NOT NULL,
  "$type" TEXT NOT NULL,
  "$version" INTEGER NOT NULL DEFAULT 1,
  "$createdAt" BIGINT NOT NULL,
  "$updatedAt" BIGINT NOT NULL,
  id UUID NOT NULL UNIQUE,
  sku TEXT NOT NULL UNIQUE,
  name TEXT NOT NULL UNIQUE,
  price DECIMAL(38, 9) NOT NULL UNIQUE,
  quantity INTEGER NOT NULL,
  isActive BOOLEAN NOT NULL,
  createdAt TIMESTAMP NOT NULL,
  PRIMARY KEY ("$id"),
  UNIQUE (id),
  UNIQUE (sku),
  UNIQUE (name),
  UNIQUE (price)
);"
`;

exports[`PostgreSQL DDL Snapshots > Indexes and constraints DDL output > should match snapshot for indexed schema with indexes 1`] = `
"CREATE TABLE Product (
  "$id" TEXT NOT NULL,
  "$type" TEXT NOT NULL,
  "$version" INTEGER NOT NULL DEFAULT 1,
  "$createdAt" BIGINT NOT NULL,
  "$updatedAt" BIGINT NOT NULL,
  id UUID NOT NULL UNIQUE,
  sku TEXT NOT NULL UNIQUE,
  name TEXT NOT NULL UNIQUE,
  price DECIMAL(38, 9) NOT NULL UNIQUE,
  quantity INTEGER NOT NULL,
  isActive BOOLEAN NOT NULL,
  createdAt TIMESTAMP NOT NULL,
  PRIMARY KEY ("$id"),
  UNIQUE (id),
  UNIQUE (sku),
  UNIQUE (name),
  UNIQUE (price)
);

CREATE INDEX IF NOT EXISTS idx_Product_id ON Product (id);
CREATE INDEX IF NOT EXISTS idx_Product_sku ON Product (sku);
CREATE INDEX IF NOT EXISTS idx_Product_name ON Product (name);
CREATE INDEX IF NOT EXISTS idx_Product_price ON Product (price);"
`;

exports[`PostgreSQL DDL Snapshots > Indexes and constraints DDL output > should match snapshot for indexed schema without system fields 1`] = `
"CREATE TABLE Product (
  id UUID NOT NULL UNIQUE,
  sku TEXT NOT NULL UNIQUE,
  name TEXT NOT NULL UNIQUE,
  price DECIMAL(38, 9) NOT NULL UNIQUE,
  quantity INTEGER NOT NULL,
  isActive BOOLEAN NOT NULL,
  createdAt TIMESTAMP NOT NULL,
  UNIQUE (id),
  UNIQUE (sku),
  UNIQUE (name),
  UNIQUE (price)
);

CREATE INDEX IF NOT EXISTS idx_Product_id ON Product (id);
CREATE INDEX IF NOT EXISTS idx_Product_sku ON Product (sku);
CREATE INDEX IF NOT EXISTS idx_Product_name ON Product (name);
CREATE INDEX IF NOT EXISTS idx_Product_price ON Product (price);"
`;

exports[`PostgreSQL DDL Snapshots > Simple schema DDL output > should match snapshot for simple schema 1`] = `
"CREATE TABLE "User" (
  "$id" TEXT NOT NULL,
  "$type" TEXT NOT NULL,
  "$version" INTEGER NOT NULL DEFAULT 1,
  "$createdAt" BIGINT NOT NULL,
  "$updatedAt" BIGINT NOT NULL,
  id UUID NOT NULL UNIQUE,
  email TEXT NOT NULL UNIQUE,
  name TEXT NOT NULL,
  age INTEGER,
  PRIMARY KEY ("$id"),
  UNIQUE (id),
  UNIQUE (email)
);"
`;

exports[`PostgreSQL DDL Snapshots > Simple schema DDL output > should match snapshot for simple schema with IF NOT EXISTS 1`] = `
"CREATE TABLE IF NOT EXISTS "User" (
  "$id" TEXT NOT NULL,
  "$type" TEXT NOT NULL,
  "$version" INTEGER NOT NULL DEFAULT 1,
  "$createdAt" BIGINT NOT NULL,
  "$updatedAt" BIGINT NOT NULL,
  id UUID NOT NULL UNIQUE,
  email TEXT NOT NULL UNIQUE,
  name TEXT NOT NULL,
  age INTEGER,
  PRIMARY KEY ("$id"),
  UNIQUE (id),
  UNIQUE (email)
);"
`;

exports[`PostgreSQL DDL Snapshots > Simple schema DDL output > should match snapshot for simple schema with custom table name 1`] = `
"CREATE TABLE users_table (
  "$id" TEXT NOT NULL,
  "$type" TEXT NOT NULL,
  "$version" INTEGER NOT NULL DEFAULT 1,
  "$createdAt" BIGINT NOT NULL,
  "$updatedAt" BIGINT NOT NULL,
  id UUID NOT NULL UNIQUE,
  email TEXT NOT NULL UNIQUE,
  name TEXT NOT NULL,
  age INTEGER,
  PRIMARY KEY ("$id"),
  UNIQUE (id),
  UNIQUE (email)
);"
`;

exports[`PostgreSQL DDL Snapshots > Simple schema DDL output > should match snapshot for simple schema with schema name 1`] = `
"CREATE TABLE "public"."User" (
  "$id" TEXT NOT NULL,
  "$type" TEXT NOT NULL,
  "$version" INTEGER NOT NULL DEFAULT 1,
  "$createdAt" BIGINT NOT NULL,
  "$updatedAt" BIGINT NOT NULL,
  id UUID NOT NULL UNIQUE,
  email TEXT NOT NULL UNIQUE,
  name TEXT NOT NULL,
  age INTEGER,
  PRIMARY KEY ("$id"),
  UNIQUE (id),
  UNIQUE (email)
);"
`;

exports[`PostgreSQL DDL Snapshots > Simple schema DDL output > should match snapshot for simple schema without system fields 1`] = `
"CREATE TABLE "User" (
  id UUID NOT NULL UNIQUE,
  email TEXT NOT NULL UNIQUE,
  name TEXT NOT NULL,
  age INTEGER,
  UNIQUE (id),
  UNIQUE (email)
);"
`;
